--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -20,16 +20,29 @@
     background-color: #E65100;
     color: #FFF3E0;
   }
+  #headshot{
+	  width: 250px;
+  }
   .center{
 	  display: block;
 	  margin-left: auto;
 	  margin-right: auto;
-	  width: 50%;
+	  width: 50%
   }
+  .centeredHeader{
+	  text-align: center;
+  }
+  p.centeredLink{
+	  text-align: center;
+	  display: block;
+	  margin: 20px auto;
+	  width: 120px;
+
   a:link {
-	  color: green;
+	  color: #FFAB40;
 	  background-color: transparent;
 	  text-decoration: none;
+	  text-align: center;
   }
   a:visited {
 	  color: pink;
@@ -37,7 +50,7 @@
 	  text-decoration: none;
   }
   a:hover {
-	  color: #FFCC80;
+	  color: #FF6D00;
 	  background-color: transparent;
 	  text-decoration: underline;
   }
