--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -2,6 +2,11 @@
 	font-family: 'Helvetica', 'Arial', sans-serif;
 	background-color: #FFE0B2;
   }
+  h1 {
+	  font-size: 3em;
+  }
+  
+  
   #assignments{
     font-family:   Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -9,51 +14,75 @@
   }
   #assignments td, #assignments th{
     border: 1px solid #ddd;
-    padding: 20px;
-    text-align: left;
+    padding: 15px;
+    text-align: center;
   }
   #assignments tr:nth-child(even)
     {background-color: #FFD180;}
   #assignments tr:hover{background-color:#FFB74D;}
   #assignments th{
-  	padding: 40px;
+  	padding: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    text-align: left;
+    text-align: center;
     background-color: #FB8C00;
     color: #FFF3E0;
+	font-size: 1.4em;
   }
   
-  .partners{
-	  display: inline;
-	  float: none;
-  }
   
-  section{
-	  border-radius: 1em;
-	  padding: 1em;
-	  position: absolute;
-	  top: 50%;
-	  left: 50%;
-	  margin-right: -50%;
-  transform: translate(-50%, -50%)
-  }
-  
-  div.reference{
-	border: 1px solid red;
+ div.hobbies{
+	/*border: 3px solid red; */
+	display: block;
+	margin: 0 auto;
+	max-width: 45%
+ }
+ .hobbies h2{
+	text-align: center;
+	font-size: 2em;
+	font-family: Verdana, Arial, sans-serif;	
+ }
+ ul{
+	background:#ffac2b;
+	padding: 0;
+	list-style-type: none;
+	/*border: 1px solid #ddd; */
+	margin: auto;
+	text-align: center;
+ }
+ ul li{
+	 font-size: 1.4em;
+	 font-family: Arial, sans-serif;
+	 padding: 5px;
+	 
+ }
+ 
+  div.profile{
+	/*border: 1px solid red; */
 	display: block;
 	margin: 0 auto;
   }
   
   #headshot{
-	  display: block;
-	  margin-left: auto;
-	  margin-right: auto;
-	  max-width: 250px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 250px;
+	border: 10px solid white;
+	padding: 1px;
+	width: 30%;
   }
-  .reference p, h1{
+  .profile p, h1{
 	 text-align: center;
   }
+  
+  div.table{
+	/*border: 2px solid blue; */
+	display: block;
+	margin: 0 auto;
+	max-width: 40%
+  }
+ 
   
   div.center{
 	  max-width: 50%;
@@ -65,19 +94,23 @@
   .center p h1{
 	  text-align: center;
   }
+   
+  .table a{
+	  display: block;
+	  text-decoration: none;
+  }
   a.fancy{
 	text-align: center;
 	width: 100%;
-	font-size: 150%;  
+	font-size: 1.1em;  
   }  
   a:link {
-	  color: #FFAB40;
+	  color: #0957a1;
 	  background-color: transparent;
 	  text-decoration: none;
-	  text-align: center;
   }
   a:visited {
-	  color: pink;
+	  color: #bf000c;
 	  background-color: transparent;
 	  text-decoration: none;
   }
@@ -91,15 +124,4 @@
 	  background-color: transparent;
 	  text-decoration: underline;
   }
-  div.rcorners{
-	  display: inline-block;
-	  border-radius: 10px 100px 10px 100px;
-	  background-color: #BDBDBD;
-	  padding: 40px;
-	  width: 2.4em;
-	  height: 2.4em;
-	  text-align: center;
-  }
-  
-  
   
