--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -6,7 +6,6 @@
 	  font-size: 3em;
   }
   
-  
   #assignments{
     font-family:   Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -30,9 +29,8 @@
 	font-size: 1.4em;
   }
   
-  
  div.hobbies{
-	/*border: 3px solid red; */
+	border: 3px solid red;
 	display: block;
 	margin: 0 auto;
 	max-width: 45%
@@ -40,13 +38,14 @@
  .hobbies h2{
 	text-align: center;
 	font-size: 2em;
-	font-family: Verdana, Arial, sans-serif;	
+	font-family: Verdana, Arial, sans-serif;
+	/*overflow-wrap: break-word;*/
  }
  ul{
 	background:#ffac2b;
 	padding: 0;
 	list-style-type: none;
-	/*border: 1px solid #ddd; */
+	border: 1px solid #ddd; 
 	margin: auto;
 	text-align: center;
  }
@@ -58,7 +57,7 @@
  }
  
   div.profile{
-	/*border: 1px solid red; */
+	border: 1px solid red;
 	display: block;
 	margin: 0 auto;
   }
@@ -77,7 +76,7 @@
   }
   
   div.table{
-	/*border: 2px solid blue; */
+	border: 2px solid blue;
 	display: block;
 	margin: 0 auto;
 	max-width: 40%
