--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -65,7 +65,7 @@
 	text-align: left;
  }
   ul li{
-	 font-size: 1.4em;
+	 font-size: 1.3em;
 	 font-family: Arial, sans-serif;
 	 padding: 5px;
  }
@@ -91,7 +91,7 @@
 	max-width: 40%
   }
   
-  
+
 
   div.biography{
 	  /*border:3px solid blue;*/
@@ -99,6 +99,7 @@
 	  max-width: 40%;
 	  min-width: 180px;
 	  background: #FFD180;
+	  text-align:left;
   }
   .biography h2{
 	text-align: left;
@@ -110,12 +111,16 @@
 		1px -1px 0 #000,
 		-1px 1px 0 #000,
 		1px 1px 0 #000;
-	background
   }
   .biography ul{
 	margin: 0;
-	padding: 0;	
+	padding: 0;
+	list-style-type: circle;
   }
+  .biography li{
+	  font-size: 1.25em;
+  }
+ 
 
   #quote{
 	  /*border: 2px solid red;*/
@@ -144,7 +149,10 @@
 	 text-align: center;
   }
   
- 
+ .specialwords{
+	color: red;
+	font-weight: bold;
+ }
  
   
   div.center{
